# ironchat

./: .gitignore  Cargo.toml  DEPLOY.md  README.md  build-linux.sh  install-chatctl.sh
crates/chat-core/: Cargo.toml
crates/chat-core/src/: allowlist.rs  history.rs  identities.rs  lib.rs  protocol.rs  rate.rs  util.rs
crates/chatctl/: Cargo.toml
crates/chatctl/src/: main.rs
crates/chatd/: Cargo.toml
crates/chatd/src/: main.rs  state.rs  tls.rs
crates/chatd/tests/: integration.rs
ironchat-client/: chatctl
