[workspace]
resolver = "2"
members = [
  "crates/chat-core",
  "crates/chatd",
  "crates/chatctl",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ipnet = "2"
rcgen = "0.12"
redis = { version = "0.25" }
rustls = "0.22"
rustls-native-certs = "0.7"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
