[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[features]
redis = ["dep:redis"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
ipnet = { workspace = true }
redis = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = "3"
