[package]
name = "chatctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chat-core = { path = "../chat-core" }
clap = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
